--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
+    <title>FORTUNA</title>
+    <link href="https://blackfriday.fota.top/static/favicon.ico" rel="shortcut icon">
+    <script type="text/javascript">
+        window.baseUrl = '/';
+    </script>
 </head>
 <body>
-  <div>个人简介</div>
+    <div id="root"></div>
+    <!-- built files will be auto injected -->
 </body>
 </html>
