--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="renderer" content="webkit">
+    <meta name="format-detection" content="telephone=no">
     <title>FORTUNA</title>
-    <link href="https://blackfriday.fota.top/static/favicon.ico" rel="shortcut icon">
-    <script type="text/javascript">
-        window.baseUrl = '/';
-    </script>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_713414_z0fg2xh2v5.css">
 </head>
 <body>
-    <div id="root"></div>
-    <!-- built files will be auto injected -->
+
+    <div id="root">
+    </div>
 </body>
 </html>
