--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="renderer" content="webkit">
     <meta name="format-detection" content="telephone=no">
-    <title>FORTUNA</title>
+    <meta content="滕华伟,web前端工程师,区块链金融,互联网金融" name="description">
+    <meta content="滕华伟,web前端工程师,区块链金融,互联网金融" name="keywords">
+    <title>Tenggouwa</title>
     <link rel="stylesheet" href="//at.alicdn.com/t/font_792892_lw9l3nra8.css">
 </head>
 <body>
